--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "ac62368e",
    "metadata": {},
    "outputs": [],
@@ -13,169 +13,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "dc70f38c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "import forecast"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "264d375d",
+   "execution_count": 11,
+   "id": "5650155b",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "...checking forecast for Kolifornia...\n",
-      "\n",
-      "Nope, nothing on the horizon :(\n",
-      "\n",
-      "...checking forecast for Seabridge...\n",
-      "\n",
-      "Yeewww, surf's up in Seabridge on 05-12-2024\n",
-      "Yeewww, surf's up in Seabridge on 06-12-2024\n",
-      "Yeewww, surf's up in Seabridge on 07-12-2024\n",
-      "Yeewww, surf's up in Seabridge on 08-12-2024\n",
-      "Yeewww, surf's up in Seabridge on 09-12-2024\n",
-      "Yeewww, surf's up in Seabridge on 10-12-2024\n",
-      "Yeewww, surf's up in Seabridge on 11-12-2024\n",
-      "Yeewww, surf's up in Seabridge on 12-12-2024\n"
+      "Obtaining file:///Users/user/code/marko800/wave-alarm/forecast\r\n",
+      "\u001b[31mERROR: file:///Users/user/code/marko800/wave-alarm/forecast does not appear to be a Python project: neither 'setup.py' nor 'pyproject.toml' found.\u001b[0m\u001b[31m\r\n",
+      "\u001b[0m"
      ]
-    },
+    }
+   ],
+   "source": [
+    "!pip install -e forecast"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "dc70f38c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "from forecast import forecast"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "264d375d",
+   "metadata": {},
+   "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<style type=\"text/css\">\n",
-       "#T_60f1d_row0_col0, #T_60f1d_row0_col1, #T_60f1d_row0_col2, #T_60f1d_row0_col3, #T_60f1d_row0_col4, #T_60f1d_row0_col5, #T_60f1d_row1_col0, #T_60f1d_row1_col1, #T_60f1d_row1_col2, #T_60f1d_row1_col3, #T_60f1d_row1_col4, #T_60f1d_row1_col5, #T_60f1d_row2_col0, #T_60f1d_row2_col1, #T_60f1d_row2_col2, #T_60f1d_row2_col3, #T_60f1d_row2_col4, #T_60f1d_row2_col5, #T_60f1d_row4_col0, #T_60f1d_row4_col1, #T_60f1d_row4_col2, #T_60f1d_row4_col3, #T_60f1d_row4_col4, #T_60f1d_row4_col5, #T_60f1d_row5_col0, #T_60f1d_row5_col1, #T_60f1d_row5_col2, #T_60f1d_row5_col3, #T_60f1d_row5_col4, #T_60f1d_row5_col5, #T_60f1d_row6_col0, #T_60f1d_row6_col1, #T_60f1d_row6_col2, #T_60f1d_row6_col3, #T_60f1d_row6_col4, #T_60f1d_row6_col5 {\n",
-       "  background-color: lightcoral;\n",
-       "}\n",
-       "#T_60f1d_row3_col0, #T_60f1d_row3_col1, #T_60f1d_row3_col2, #T_60f1d_row3_col3, #T_60f1d_row3_col4, #T_60f1d_row3_col5, #T_60f1d_row7_col0, #T_60f1d_row7_col1, #T_60f1d_row7_col2, #T_60f1d_row7_col3, #T_60f1d_row7_col4, #T_60f1d_row7_col5 {\n",
-       "  background-color: white;\n",
-       "}\n",
-       "</style>\n",
-       "<table id=\"T_60f1d\">\n",
-       "  <thead>\n",
-       "    <tr>\n",
-       "      <th class=\"blank level0\" >&nbsp;</th>\n",
-       "      <th id=\"T_60f1d_level0_col0\" class=\"col_heading level0 col0\" >sunrise</th>\n",
-       "      <th id=\"T_60f1d_level0_col1\" class=\"col_heading level0 col1\" >sunset</th>\n",
-       "      <th id=\"T_60f1d_level0_col2\" class=\"col_heading level0 col2\" >wind_speed (km/h)</th>\n",
-       "      <th id=\"T_60f1d_level0_col3\" class=\"col_heading level0 col3\" >wind_gust (km/h)</th>\n",
-       "      <th id=\"T_60f1d_level0_col4\" class=\"col_heading level0 col4\" >wind_deg (°)</th>\n",
-       "      <th id=\"T_60f1d_level0_col5\" class=\"col_heading level0 col5\" >wind_dir</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th class=\"index_name level0\" >date</th>\n",
-       "      <th class=\"blank col0\" >&nbsp;</th>\n",
-       "      <th class=\"blank col1\" >&nbsp;</th>\n",
-       "      <th class=\"blank col2\" >&nbsp;</th>\n",
-       "      <th class=\"blank col3\" >&nbsp;</th>\n",
-       "      <th class=\"blank col4\" >&nbsp;</th>\n",
-       "      <th class=\"blank col5\" >&nbsp;</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th id=\"T_60f1d_level0_row0\" class=\"row_heading level0 row0\" >05-12-2024 10:00:00</th>\n",
-       "      <td id=\"T_60f1d_row0_col0\" class=\"data row0 col0\" >07:09</td>\n",
-       "      <td id=\"T_60f1d_row0_col1\" class=\"data row0 col1\" >14:43</td>\n",
-       "      <td id=\"T_60f1d_row0_col2\" class=\"data row0 col2\" >41</td>\n",
-       "      <td id=\"T_60f1d_row0_col3\" class=\"data row0 col3\" >55</td>\n",
-       "      <td id=\"T_60f1d_row0_col4\" class=\"data row0 col4\" >168</td>\n",
-       "      <td id=\"T_60f1d_row0_col5\" class=\"data row0 col5\" >SSE</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th id=\"T_60f1d_level0_row1\" class=\"row_heading level0 row1\" >06-12-2024 10:00:00</th>\n",
-       "      <td id=\"T_60f1d_row1_col0\" class=\"data row1 col0\" >07:11</td>\n",
-       "      <td id=\"T_60f1d_row1_col1\" class=\"data row1 col1\" >14:42</td>\n",
-       "      <td id=\"T_60f1d_row1_col2\" class=\"data row1 col2\" >43</td>\n",
-       "      <td id=\"T_60f1d_row1_col3\" class=\"data row1 col3\" >54</td>\n",
-       "      <td id=\"T_60f1d_row1_col4\" class=\"data row1 col4\" >152</td>\n",
-       "      <td id=\"T_60f1d_row1_col5\" class=\"data row1 col5\" >SSE</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th id=\"T_60f1d_level0_row2\" class=\"row_heading level0 row2\" >07-12-2024 10:00:00</th>\n",
-       "      <td id=\"T_60f1d_row2_col0\" class=\"data row2 col0\" >07:12</td>\n",
-       "      <td id=\"T_60f1d_row2_col1\" class=\"data row2 col1\" >14:42</td>\n",
-       "      <td id=\"T_60f1d_row2_col2\" class=\"data row2 col2\" >37</td>\n",
-       "      <td id=\"T_60f1d_row2_col3\" class=\"data row2 col3\" >48</td>\n",
-       "      <td id=\"T_60f1d_row2_col4\" class=\"data row2 col4\" >150</td>\n",
-       "      <td id=\"T_60f1d_row2_col5\" class=\"data row2 col5\" >SSE</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th id=\"T_60f1d_level0_row3\" class=\"row_heading level0 row3\" >08-12-2024 10:00:00</th>\n",
-       "      <td id=\"T_60f1d_row3_col0\" class=\"data row3 col0\" >07:13</td>\n",
-       "      <td id=\"T_60f1d_row3_col1\" class=\"data row3 col1\" >14:41</td>\n",
-       "      <td id=\"T_60f1d_row3_col2\" class=\"data row3 col2\" >35</td>\n",
-       "      <td id=\"T_60f1d_row3_col3\" class=\"data row3 col3\" >40</td>\n",
-       "      <td id=\"T_60f1d_row3_col4\" class=\"data row3 col4\" >56</td>\n",
-       "      <td id=\"T_60f1d_row3_col5\" class=\"data row3 col5\" >NE</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th id=\"T_60f1d_level0_row4\" class=\"row_heading level0 row4\" >09-12-2024 10:00:00</th>\n",
-       "      <td id=\"T_60f1d_row4_col0\" class=\"data row4 col0\" >07:14</td>\n",
-       "      <td id=\"T_60f1d_row4_col1\" class=\"data row4 col1\" >14:41</td>\n",
-       "      <td id=\"T_60f1d_row4_col2\" class=\"data row4 col2\" >60</td>\n",
-       "      <td id=\"T_60f1d_row4_col3\" class=\"data row4 col3\" >79</td>\n",
-       "      <td id=\"T_60f1d_row4_col4\" class=\"data row4 col4\" >48</td>\n",
-       "      <td id=\"T_60f1d_row4_col5\" class=\"data row4 col5\" >NE</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th id=\"T_60f1d_level0_row5\" class=\"row_heading level0 row5\" >10-12-2024 10:00:00</th>\n",
-       "      <td id=\"T_60f1d_row5_col0\" class=\"data row5 col0\" >07:16</td>\n",
-       "      <td id=\"T_60f1d_row5_col1\" class=\"data row5 col1\" >14:41</td>\n",
-       "      <td id=\"T_60f1d_row5_col2\" class=\"data row5 col2\" >57</td>\n",
-       "      <td id=\"T_60f1d_row5_col3\" class=\"data row5 col3\" >70</td>\n",
-       "      <td id=\"T_60f1d_row5_col4\" class=\"data row5 col4\" >46</td>\n",
-       "      <td id=\"T_60f1d_row5_col5\" class=\"data row5 col5\" >NE</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th id=\"T_60f1d_level0_row6\" class=\"row_heading level0 row6\" >11-12-2024 10:00:00</th>\n",
-       "      <td id=\"T_60f1d_row6_col0\" class=\"data row6 col0\" >07:17</td>\n",
-       "      <td id=\"T_60f1d_row6_col1\" class=\"data row6 col1\" >14:40</td>\n",
-       "      <td id=\"T_60f1d_row6_col2\" class=\"data row6 col2\" >32</td>\n",
-       "      <td id=\"T_60f1d_row6_col3\" class=\"data row6 col3\" >43</td>\n",
-       "      <td id=\"T_60f1d_row6_col4\" class=\"data row6 col4\" >75</td>\n",
-       "      <td id=\"T_60f1d_row6_col5\" class=\"data row6 col5\" >ENE</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th id=\"T_60f1d_level0_row7\" class=\"row_heading level0 row7\" >12-12-2024 10:00:00</th>\n",
-       "      <td id=\"T_60f1d_row7_col0\" class=\"data row7 col0\" >07:18</td>\n",
-       "      <td id=\"T_60f1d_row7_col1\" class=\"data row7 col1\" >14:40</td>\n",
-       "      <td id=\"T_60f1d_row7_col2\" class=\"data row7 col2\" >23</td>\n",
-       "      <td id=\"T_60f1d_row7_col3\" class=\"data row7 col3\" >30</td>\n",
-       "      <td id=\"T_60f1d_row7_col4\" class=\"data row7 col4\" >131</td>\n",
-       "      <td id=\"T_60f1d_row7_col5\" class=\"data row7 col5\" >SE</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n"
-      ],
-      "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x168ac2f20>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "...checking forecast for Valhalla...\n",
-      "\n",
-      "Nope, nothing on the horizon :(\n",
-      "\n",
-      "...checking forecast for Borncold...\n",
-      "\n",
-      "Nope, nothing on the horizon :(\n"
+     "ename": "KeyError",
+     "evalue": "'daily'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [7], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mforecast\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43malarm\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/code/marko800/wave-alarm/forecast/forecast.py:24\u001b[0m, in \u001b[0;36malarm\u001b[0;34m()\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21malarm\u001b[39m():\n\u001b[1;32m     21\u001b[0m     \u001b[38;5;66;03m# for each spot check if wind speed and direction are such that waves can be expected\u001b[39;00m\n\u001b[1;32m     22\u001b[0m     \u001b[38;5;66;03m# return message and display corresponding data\u001b[39;00m\n\u001b[0;32m---> 24\u001b[0m     spots_dict \u001b[38;5;241m=\u001b[39m \u001b[43mget_forecast\u001b[49m\u001b[43m(\u001b[49m\u001b[43mspots\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     26\u001b[0m     \u001b[38;5;66;03m# loop through surf spots:\u001b[39;00m\n\u001b[1;32m     27\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m spot \u001b[38;5;129;01min\u001b[39;00m spots_dict\u001b[38;5;241m.\u001b[39mkeys():\n\u001b[1;32m     28\u001b[0m         \u001b[38;5;66;03m# retrieve data\u001b[39;00m\n",
+      "File \u001b[0;32m~/code/marko800/wave-alarm/forecast/forecast.py:65\u001b[0m, in \u001b[0;36mget_forecast\u001b[0;34m(spots_dict)\u001b[0m\n\u001b[1;32m     61\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mget_forecast\u001b[39m(spots_dict \u001b[38;5;241m=\u001b[39m spots):\n\u001b[1;32m     62\u001b[0m     \u001b[38;5;66;03m# retrieve the wind forecast for all locations in spots\u001b[39;00m\n\u001b[1;32m     64\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m spot \u001b[38;5;129;01min\u001b[39;00m spots_dict\u001b[38;5;241m.\u001b[39mkeys():\n\u001b[0;32m---> 65\u001b[0m         spots_dict[spot][\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mforecast\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[43mrequest\u001b[49m\u001b[43m(\u001b[49m\u001b[43mspots_dict\u001b[49m\u001b[43m[\u001b[49m\u001b[43mspot\u001b[49m\u001b[43m]\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mlat\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43mspots_dict\u001b[49m\u001b[43m[\u001b[49m\u001b[43mspot\u001b[49m\u001b[43m]\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mlon\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     66\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m spots_dict\n",
+      "File \u001b[0;32m~/code/marko800/wave-alarm/forecast/forecast.py:76\u001b[0m, in \u001b[0;36mrequest\u001b[0;34m(lat, lon)\u001b[0m\n\u001b[1;32m     74\u001b[0m API_key \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mgetenv(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAPI_key\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     75\u001b[0m url \u001b[38;5;241m=\u001b[39m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mhttps://api.openweathermap.org/data/3.0/onecall?lat=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mlat\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m&lon=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mlon\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m&exclude=current,minutely,hourly&appid=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mAPI_key\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m---> 76\u001b[0m df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mDataFrame(\u001b[43mrequests\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget\u001b[49m\u001b[43m(\u001b[49m\u001b[43murl\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mjson\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mdaily\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m)[[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdt\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msunrise\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msunset\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mwind_speed\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mwind_gust\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mwind_deg\u001b[39m\u001b[38;5;124m\"\u001b[39m]]\n\u001b[1;32m     78\u001b[0m \u001b[38;5;66;03m# change unix to normal time\u001b[39;00m\n\u001b[1;32m     79\u001b[0m df\u001b[38;5;241m.\u001b[39mdt \u001b[38;5;241m=\u001b[39m df\u001b[38;5;241m.\u001b[39mdt\u001b[38;5;241m.\u001b[39mapply(\u001b[38;5;28;01mlambda\u001b[39;00m x : datetime\u001b[38;5;241m.\u001b[39mutcfromtimestamp(x)\u001b[38;5;241m.\u001b[39mstrftime(\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m%d\u001b[39;00m\u001b[38;5;124m-\u001b[39m\u001b[38;5;124m%\u001b[39m\u001b[38;5;124mm-\u001b[39m\u001b[38;5;124m%\u001b[39m\u001b[38;5;124mY \u001b[39m\u001b[38;5;124m%\u001b[39m\u001b[38;5;124mH:\u001b[39m\u001b[38;5;124m%\u001b[39m\u001b[38;5;124mM:\u001b[39m\u001b[38;5;124m%\u001b[39m\u001b[38;5;124mS\u001b[39m\u001b[38;5;124m'\u001b[39m))\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'daily'"
      ]
     }
    ],
