--- a/test.ipynb
+++ b/test.ipynb
@@ -33,33 +33,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "dc70f38c",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from forecast import forecast"
+    "import forecast"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "264d375d",
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "'daily'",
+     "ename": "AttributeError",
+     "evalue": "module 'forecast' has no attribute 'alarm'",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [7], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mforecast\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43malarm\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/code/marko800/wave-alarm/forecast/forecast.py:24\u001b[0m, in \u001b[0;36malarm\u001b[0;34m()\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21malarm\u001b[39m():\n\u001b[1;32m     21\u001b[0m     \u001b[38;5;66;03m# for each spot check if wind speed and direction are such that waves can be expected\u001b[39;00m\n\u001b[1;32m     22\u001b[0m     \u001b[38;5;66;03m# return message and display corresponding data\u001b[39;00m\n\u001b[0;32m---> 24\u001b[0m     spots_dict \u001b[38;5;241m=\u001b[39m \u001b[43mget_forecast\u001b[49m\u001b[43m(\u001b[49m\u001b[43mspots\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     26\u001b[0m     \u001b[38;5;66;03m# loop through surf spots:\u001b[39;00m\n\u001b[1;32m     27\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m spot \u001b[38;5;129;01min\u001b[39;00m spots_dict\u001b[38;5;241m.\u001b[39mkeys():\n\u001b[1;32m     28\u001b[0m         \u001b[38;5;66;03m# retrieve data\u001b[39;00m\n",
-      "File \u001b[0;32m~/code/marko800/wave-alarm/forecast/forecast.py:65\u001b[0m, in \u001b[0;36mget_forecast\u001b[0;34m(spots_dict)\u001b[0m\n\u001b[1;32m     61\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mget_forecast\u001b[39m(spots_dict \u001b[38;5;241m=\u001b[39m spots):\n\u001b[1;32m     62\u001b[0m     \u001b[38;5;66;03m# retrieve the wind forecast for all locations in spots\u001b[39;00m\n\u001b[1;32m     64\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m spot \u001b[38;5;129;01min\u001b[39;00m spots_dict\u001b[38;5;241m.\u001b[39mkeys():\n\u001b[0;32m---> 65\u001b[0m         spots_dict[spot][\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mforecast\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[43mrequest\u001b[49m\u001b[43m(\u001b[49m\u001b[43mspots_dict\u001b[49m\u001b[43m[\u001b[49m\u001b[43mspot\u001b[49m\u001b[43m]\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mlat\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43mspots_dict\u001b[49m\u001b[43m[\u001b[49m\u001b[43mspot\u001b[49m\u001b[43m]\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mlon\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     66\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m spots_dict\n",
-      "File \u001b[0;32m~/code/marko800/wave-alarm/forecast/forecast.py:76\u001b[0m, in \u001b[0;36mrequest\u001b[0;34m(lat, lon)\u001b[0m\n\u001b[1;32m     74\u001b[0m API_key \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mgetenv(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAPI_key\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     75\u001b[0m url \u001b[38;5;241m=\u001b[39m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mhttps://api.openweathermap.org/data/3.0/onecall?lat=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mlat\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m&lon=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mlon\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m&exclude=current,minutely,hourly&appid=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mAPI_key\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m---> 76\u001b[0m df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mDataFrame(\u001b[43mrequests\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget\u001b[49m\u001b[43m(\u001b[49m\u001b[43murl\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mjson\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mdaily\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m)[[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdt\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msunrise\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msunset\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mwind_speed\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mwind_gust\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mwind_deg\u001b[39m\u001b[38;5;124m\"\u001b[39m]]\n\u001b[1;32m     78\u001b[0m \u001b[38;5;66;03m# change unix to normal time\u001b[39;00m\n\u001b[1;32m     79\u001b[0m df\u001b[38;5;241m.\u001b[39mdt \u001b[38;5;241m=\u001b[39m df\u001b[38;5;241m.\u001b[39mdt\u001b[38;5;241m.\u001b[39mapply(\u001b[38;5;28;01mlambda\u001b[39;00m x : datetime\u001b[38;5;241m.\u001b[39mutcfromtimestamp(x)\u001b[38;5;241m.\u001b[39mstrftime(\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m%d\u001b[39;00m\u001b[38;5;124m-\u001b[39m\u001b[38;5;124m%\u001b[39m\u001b[38;5;124mm-\u001b[39m\u001b[38;5;124m%\u001b[39m\u001b[38;5;124mY \u001b[39m\u001b[38;5;124m%\u001b[39m\u001b[38;5;124mH:\u001b[39m\u001b[38;5;124m%\u001b[39m\u001b[38;5;124mM:\u001b[39m\u001b[38;5;124m%\u001b[39m\u001b[38;5;124mS\u001b[39m\u001b[38;5;124m'\u001b[39m))\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'daily'"
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mforecast\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43malarm\u001b[49m()\n",
+      "\u001b[0;31mAttributeError\u001b[0m: module 'forecast' has no attribute 'alarm'"
      ]
     }
    ],
@@ -246,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "76c81357",
    "metadata": {},
    "outputs": [
@@ -382,7 +379,7 @@
     "        return ['background-color: lightcoral'] * len(row)\n",
     "    else:\n",
     "        return ['background-color: white'] * len(row)\n",
-    "    \n",
+    "\n",
     "df.style.apply(color_rows, axis=1)\n"
    ]
   },
@@ -397,7 +394,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "wave-alarm",
    "language": "python",
    "name": "python3"
   },
